<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bonsaizen_inicio"
    tools:context=".ui.register.RegisterFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/bonsaizen_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inder"
        android:text="@string/tv_login_title"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="20dp"
        android:fontFamily="@font/inder"
        android:inputType="text"
        android:paddingStart="18dp"
        android:hint="@string/et_mail_hint"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@drawable/ic_block"
        android:drawableEnd="@drawable/ic_eye_pass"
        android:drawablePadding="20dp"
        android:fontFamily="@font/inder"
        android:inputType="textPassword"
        android:longClickable="false"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/et_pass_hint"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_button_border"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:fontFamily="@font/inder"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/red"
        android:drawableStart="@drawable/ic_google"
        android:paddingStart="20dp"
        android:text="@string/btn_login_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.514" />


</androidx.constraintlayout.widget.ConstraintLayout>