<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addbonsai.AddBonsaiFragment">

    <ImageView
        android:id="@+id/iv_photo_bonsai"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/gray"
        android:src="@drawable/ic_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:padding="12dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_bonsai" />

    <TextView
        android:id="@+id/tv_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inder"
        android:text="@string/tv_add_photo_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/iv_camera"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_bonsai" />

    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/et_name"
        android:textSize="16sp"
        android:fontFamily="@font/inder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_camera" />

    <EditText
        android:id="@+id/et_name_bonsai"
        android:layout_width="253dp"
        android:layout_height="35dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/tv_name_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_photo" />

    <TextView
        android:id="@+id/tv_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inder"
        android:text="@string/et_date"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_label" />

    <EditText
        android:id="@+id/et_date_bonsai"
        android:layout_width="203dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_date_label"
        app:layout_constraintTop_toBottomOf="@+id/et_name_bonsai" />

    <TextView
        android:id="@+id/tv_transplant_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inder"
        android:text="@string/et_transplant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_label" />

    <EditText
        android:id="@+id/et_transplant_bonsai"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_transplant_label"
        app:layout_constraintTop_toBottomOf="@+id/et_date_bonsai" />

    <TextView
        android:id="@+id/tv_next_transplant_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inder"
        android:text="@string/et_next_transplant"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transplant_label" />

    <EditText
        android:id="@+id/et_next_transplant_bonsai"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_next_transplant_label"
        app:layout_constraintTop_toBottomOf="@+id/et_transplant_bonsai" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="267dp"
        android:layout_height="40dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_add"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>