<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bonsaizen_inicio"
    tools:context=".ui.init.InitFragment">

    <ImageView
        android:id="@+id/iv_init_bonsai"
        android:layout_width="66dp"
        android:layout_height="64dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_init_bonsai_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_init_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/sonsie_one"
        android:text="@string/tv_init_text"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toEndOf="@+id/iv_init_bonsai"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_init"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginTop="492dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/inder"
        android:paddingHorizontal="20dp"
        android:text="@string/btn_init_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_init_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_init2"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_button_border"
        android:fontFamily="@font/inder"
        android:paddingHorizontal="20dp"
        android:text="@string/btn_init_text2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_init"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>